tests/macros/float/mask.stderr
error: option `mask` does not exist for kind `float`
 --> $DIR/mask.rs:2:43
  |
2 |     let q = discourse::questions![Float { mask: todo!() }];
  |                                           ^^^^
