tests/macros/float/mask.rs
fn main() {
    let q = discourse::questions![Float { mask: todo!() }];
}
